--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header id="header">
         <div class="logo">
-            <span class="icon fa-gem"></span>
+            <span class="fa fa-drum"></span>
         </div>
         <div class="content">
             <div class="inner">
@@ -45,6 +45,7 @@
                        target="_blank">Spotify</a></li>
                 <li><a href="https://music.apple.com/us/artist/venture-35/1735525177" target="_blank">Apple Music</a>
                 </li>
+                <li><a href="https://www.instagram.com/venture.35" target="_blank">Instagram</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!--<li><a href="#elements">Elements</a></li>-->
             </ul>
@@ -97,7 +98,7 @@
         <!-- Contact -->
         <article id="contact">
             <h2 class="major">Contact</h2>
-            <form method="post" action="#">
+            <form id="contact-form">
                 <div class="fields">
                     <div class="field half">
                         <label for="name">Name</label>
@@ -390,6 +391,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/contact.js"></script>
 
 </body>
 </html>
