Disabled contact form

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="https://music.apple.com/us/artist/venture-35/1735525177" target="_blank">Apple Music</a>
                 </li>
                 <li><a href="https://www.instagram.com/venture.35" target="_blank">Instagram</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!--                <li><a href="#contact">Contact</a></li>-->
             </ul>
         </nav>
     </header>
